<resources>
    <string name="app_name">WhotsApp</string>
    <string name="sagar">ꜱ ᴀ ɢ ᴀ ʀ</string>
    <string name="from">ᶠʳᵒᵐ</string>
    <string name="whotsapp">WhotsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_service">Read our Privacy Policy. Tap Agree and Continue to Accept the Terms of Service</string>
    <string name="welcome_to_whotsapp">Welcome to WhotsApp</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="whotsapp_will_send_you_an_sms_message_to_verify_your_phone_number">WhotsApp will send you an SMS message to verify your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_code">Enter code</string>
    <string name="profile_info">Profile info</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="linked_devices">Linked devices</string>
    <string name="starred_messages">Starred messages</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="none_of_your_contacts_are_using_whotsapp_nuse_the_button_below_to_invite_them">None of your contacts are using WhotsApp.\nUse the button below to invite them.</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="chat_with_your_friends_who_are_using_whotsapp_on_niphone_android_windows_and_linux_os">Chat with your friends who are using WhotsApp on\niPhone, Android, Windows and Linux OS</string>
    <string name="invite_your_friends">Invite your friends</string>
    <string name="theme_wallpapers_chat_history">Theme, wallpapers, chat history</string>
    <string name="chats">Chats</string>
    <string name="account">Account</string>
    <string name="privacy_security_change_number">Privacy,security, change number</string>
    <string name="notifications">Notifications</string>
    <string name="message_group_amp_call_tones"><![CDATA[Message, group & call tones]]></string>
    <string name="storage_and_data">Storage and data</string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>
    <string name="help">Help</string>
    <string name="help_center_contact_us_privacy_policy">Help center, contact us, privacy policy</string>
    <string name="name">Name</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_whotsapp_contacts">This is not your username or pin. This name will be visible to your WhotsApp contacts</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="profile_photo">Profile photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="type_here">Type here...</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="select_contact">Select Contact</string>
    <string name="type_message_here">Message</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="document">Document</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="contacts">Contacts</string>
    <string name="username">Username</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="more_options">More Options</string>
</resources>