<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startup.WelcomeScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#50cf55"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_to_whotsapp"/>
        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/whotsapp_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_service"/>
        <Button
            android:id="@+id/btn_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_green"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:text="@string/agree_and_continue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/from"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sagar"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="#50cf55"/>
    </LinearLayout>
</RelativeLayout>