<?xml version="1.0" encoding="utf-8"?>
<layout>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.ChatsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chats_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/ll_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_your_friends"
            android:textSize="25sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/none_of_your_contacts_are_using_whotsapp_nuse_the_button_below_to_invite_them"/>
        <Button
            android:id="@+id/btn_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#076C2D"
            android:textColor="@color/white"
            android:text="@string/invite_a_friend"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/chat_with_your_friends_who_are_using_whotsapp_on_niphone_android_windows_and_linux_os"/>

    </LinearLayout>

</FrameLayout>

</layout>