<?xml version="1.0" encoding="utf-8"?>
<layout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.auth.PhoneLoginActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:textColor="@color/theme_color"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/enter_your_phone_number"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_more_vert_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/whotsapp_will_send_you_an_sms_message_to_verify_your_phone_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/ed_code_country"
                android:layout_width="50dp"
                android:gravity="end"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:text="91"/>
            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxLength="13"
                android:maxLines="1"
                android:inputType="phone"
                android:hint="@string/phone_number"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="Carrier SMS charges may apply*"/>

        <EditText
            android:id="@+id/ed_code"
            android:layout_width="200dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:maxLength="6"
            android:visibility="gone"
            android:inputType="number"
            android:hint="@string/enter_code"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/theme_color"
        android:text="Send"
        android:textColor="@color/white" />
</RelativeLayout>

</layout>